src/rules/snapshots/pg_migration_lint__rules__pgm010__tests__multi_column_unique_drop_one_fires.snap
---
source: src/rules/pgm010.rs
expression: findings
---
- rule_id: PGM010
  severity: Minor
  message: "Dropping column 'a' from table 'subscriptions' silently removes unique constraint 'uq_subscriptions_a_b'. Verify that the uniqueness guarantee is no longer needed."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
