src/rules/snapshots/pg_migration_lint__rules__pgm010__tests__not_null_no_default_fires.snap
---
source: src/rules/pgm010.rs
assertion_line: 115
expression: findings
---
- rule_id: PGM010
  severity: Critical
  message: "Adding NOT NULL column 'status' to existing table 'orders' without a DEFAULT will fail if the table has any rows. Add a DEFAULT value, or add the column as nullable and backfill."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
